--- a/NEU-Mathe-Local/NEU-Mathe-Local.vcxproj.filters
+++ b/NEU-Mathe-Local/NEU-Mathe-Local.vcxproj.filters
@@ -15,9 +15,6 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="DataWrapper.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
     <ClCompile Include="hashmap.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
@@ -46,6 +43,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="IocService.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="RecordWrapper.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
