--- a/NEU-Mathe-Local/NEU-Mathe-Local.vcxproj.filters
+++ b/NEU-Mathe-Local/NEU-Mathe-Local.vcxproj.filters
@@ -83,5 +83,18 @@
     <ClInclude Include="RecordWrapper.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="resource.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="NEU-Mathe-Local.rc">
+      <Filter>资源文件</Filter>
+    </ResourceCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="..\icon.ico">
+      <Filter>资源文件</Filter>
+    </Image>
   </ItemGroup>
 </Project>
